--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -4,6 +4,11 @@
   color: #24292f;
   background-color: #f6f8fa;
 }
+
+.highlighter-rouge .highlight {
+    background: #f6f8fa;
+  }
+
 .highlight .k, .highlight .kd, .highlight .kn, .highlight .kp, .highlight .kr, .highlight .kt, .highlight .kv {
   color: #cf222e;
 }
