decouple portfolio width from standard page width

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -560,6 +560,26 @@ body {
   }
 }
 
+.portfolio-wide #main {
+  max-width: 2048px;
+
+  @include breakpoint($x-large) {
+    max-width: 2048px;
+  }
+}
+
+.portfolio-wide {
+  .page, .page__related {
+    @include breakpoint($large) {
+      padding-inline-end: 0;
+    }
+
+    @include breakpoint($x-large) {
+      padding-inline-end: 0;
+    }
+  }
+}
+
 :root {
     --swiper-navigation-color: white;
     --swiper-pagination-color: white;
